--- a/hls_msm_32w_13bit/hls_msm_32w_13bit/solution1/syn/report/bucket_unit_sr_Block_split153_proc7_csynth.xml
+++ b/hls_msm_32w_13bit/hls_msm_32w_13bit/solution1/syn/report/bucket_unit_sr_Block_split153_proc7_csynth.xml
@@ -8,7 +8,7 @@
 <unit>ns</unit>
 <ProductFamily>virtexuplus</ProductFamily>
 <Part>xcvu9p-flga2104-2-i</Part>
-<TopModelName>bucket_unit_csim_sr_Block_split30_proc9</TopModelName>
+<TopModelName>bucket_unit_sr_Block_split153_proc7</TopModelName>
 <TargetClockPeriod>4.00</TargetClockPeriod>
 <ClockUncertainty>1.08</ClockUncertainty>
 <FlowTarget>vivado</FlowTarget>
@@ -18,7 +18,7 @@
 <PipelineType>none</PipelineType>
 <SummaryOfTimingAnalysis>
 <unit>ns</unit>
-<EstimatedClockPeriod>3.127</EstimatedClockPeriod>
+<EstimatedClockPeriod>2.789</EstimatedClockPeriod>
 </SummaryOfTimingAnalysis>
 <SummaryOfOverallLatency>
 <unit>clock cycles</unit>
@@ -46,21 +46,35 @@
 <PipelineII>1</PipelineII>
 <PipelineDepth>1</PipelineDepth>
 </Loop2>
-<VITIS_LOOP_142_1>
+<VITIS_LOOP_260_1>
 <TripCount>undef</TripCount>
 <Latency>undef</Latency>
 <AbsoluteTimeLatency>undef</AbsoluteTimeLatency>
-<PipelineII>20</PipelineII>
-<PipelineDepth>22</PipelineDepth>
-</VITIS_LOOP_142_1>
+<PipelineII>2</PipelineII>
+<PipelineDepth>3</PipelineDepth>
+</VITIS_LOOP_260_1>
+<VITIS_LOOP_307_3>
+<TripCount>15</TripCount>
+<Latency>15</Latency>
+<AbsoluteTimeLatency>60</AbsoluteTimeLatency>
+<PipelineII>1</PipelineII>
+<PipelineDepth>2</PipelineDepth>
+</VITIS_LOOP_307_3>
+<VITIS_LOOP_314_4>
+<TripCount>undef</TripCount>
+<Latency>undef</Latency>
+<AbsoluteTimeLatency>undef</AbsoluteTimeLatency>
+<PipelineII>2</PipelineII>
+<PipelineDepth>2</PipelineDepth>
+</VITIS_LOOP_314_4>
 </SummaryOfLoopLatency>
 </PerformanceEstimates>
 
 <AreaEstimates>
 <Resources>
 <BRAM_18K>0</BRAM_18K>
-<FF>911</FF>
-<LUT>1923</LUT>
+<FF>391</FF>
+<LUT>1143</LUT>
 <DSP>0</DSP>
 <URAM>0</URAM>
 </Resources>
@@ -76,7 +90,7 @@
 <InterfaceSummary>
 <RtlPorts>
 <name>ap_clk</name>
-<Object>bucket_unit_csim_sr_Block_.split30_proc9</Object>
+<Object>bucket_unit_sr_Block_.split153_proc7</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -87,7 +101,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>ap_rst</name>
-<Object>bucket_unit_csim_sr_Block_.split30_proc9</Object>
+<Object>bucket_unit_sr_Block_.split153_proc7</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -98,7 +112,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>ap_start</name>
-<Object>bucket_unit_csim_sr_Block_.split30_proc9</Object>
+<Object>bucket_unit_sr_Block_.split153_proc7</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -109,7 +123,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>start_full_n</name>
-<Object>bucket_unit_csim_sr_Block_.split30_proc9</Object>
+<Object>bucket_unit_sr_Block_.split153_proc7</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -120,7 +134,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>ap_done</name>
-<Object>bucket_unit_csim_sr_Block_.split30_proc9</Object>
+<Object>bucket_unit_sr_Block_.split153_proc7</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -131,7 +145,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>ap_continue</name>
-<Object>bucket_unit_csim_sr_Block_.split30_proc9</Object>
+<Object>bucket_unit_sr_Block_.split153_proc7</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -142,7 +156,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>ap_idle</name>
-<Object>bucket_unit_csim_sr_Block_.split30_proc9</Object>
+<Object>bucket_unit_sr_Block_.split153_proc7</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -153,7 +167,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>ap_ready</name>
-<Object>bucket_unit_csim_sr_Block_.split30_proc9</Object>
+<Object>bucket_unit_sr_Block_.split153_proc7</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -164,7 +178,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>start_out</name>
-<Object>bucket_unit_csim_sr_Block_.split30_proc9</Object>
+<Object>bucket_unit_sr_Block_.split153_proc7</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -175,7 +189,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>start_write</name>
-<Object>bucket_unit_csim_sr_Block_.split30_proc9</Object>
+<Object>bucket_unit_sr_Block_.split153_proc7</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -373,39 +387,6 @@
 </RtlPorts>
 <RtlPorts>
 <name>BFIFO_2_read</name>
-<Object>BFIFO_2</Object>
-<Type>pointer</Type>
-<Scope></Scope>
-<IOProtocol>ap_fifo</IOProtocol>
-<IOConfig></IOConfig>
-<Dir>out</Dir>
-<Bits>1</Bits>
-<Attribute>control</Attribute>
-</RtlPorts>
-<RtlPorts>
-<name>BFIFO_2_din</name>
-<Object>BFIFO_2</Object>
-<Type>pointer</Type>
-<Scope></Scope>
-<IOProtocol>ap_fifo</IOProtocol>
-<IOConfig></IOConfig>
-<Dir>out</Dir>
-<Bits>43</Bits>
-<Attribute>control</Attribute>
-</RtlPorts>
-<RtlPorts>
-<name>BFIFO_2_full_n</name>
-<Object>BFIFO_2</Object>
-<Type>pointer</Type>
-<Scope></Scope>
-<IOProtocol>ap_fifo</IOProtocol>
-<IOConfig></IOConfig>
-<Dir>in</Dir>
-<Bits>1</Bits>
-<Attribute>control</Attribute>
-</RtlPorts>
-<RtlPorts>
-<name>BFIFO_2_write</name>
 <Object>BFIFO_2</Object>
 <Type>pointer</Type>
 <Scope></Scope>
