--- a/hls_msm_32w_13bit/hls_msm_32w_13bit/solution1/syn/report/bucket_unit_csim_sr_Block_split24_proc5_csynth.xml
+++ b/hls_msm_32w_13bit/hls_msm_32w_13bit/solution1/syn/report/bucket_unit_csim_sr_Block_split24_proc5_csynth.xml
@@ -8,7 +8,7 @@
 <unit>ns</unit>
 <ProductFamily>virtexuplus</ProductFamily>
 <Part>xcvu9p-flga2104-2-i</Part>
-<TopModelName>bucket_unit_sr_Block_split28_proc9</TopModelName>
+<TopModelName>bucket_unit_csim_sr_Block_split24_proc5</TopModelName>
 <TargetClockPeriod>4.00</TargetClockPeriod>
 <ClockUncertainty>1.08</ClockUncertainty>
 <FlowTarget>vivado</FlowTarget>
@@ -18,7 +18,7 @@
 <PipelineType>none</PipelineType>
 <SummaryOfTimingAnalysis>
 <unit>ns</unit>
-<EstimatedClockPeriod>2.789</EstimatedClockPeriod>
+<EstimatedClockPeriod>3.127</EstimatedClockPeriod>
 </SummaryOfTimingAnalysis>
 <SummaryOfOverallLatency>
 <unit>clock cycles</unit>
@@ -46,35 +46,21 @@
 <PipelineII>1</PipelineII>
 <PipelineDepth>1</PipelineDepth>
 </Loop2>
-<VITIS_LOOP_260_1>
+<VITIS_LOOP_142_1>
 <TripCount>undef</TripCount>
 <Latency>undef</Latency>
 <AbsoluteTimeLatency>undef</AbsoluteTimeLatency>
-<PipelineII>2</PipelineII>
-<PipelineDepth>3</PipelineDepth>
-</VITIS_LOOP_260_1>
-<VITIS_LOOP_307_3>
-<TripCount>15</TripCount>
-<Latency>15</Latency>
-<AbsoluteTimeLatency>60</AbsoluteTimeLatency>
-<PipelineII>1</PipelineII>
-<PipelineDepth>2</PipelineDepth>
-</VITIS_LOOP_307_3>
-<VITIS_LOOP_314_4>
-<TripCount>undef</TripCount>
-<Latency>undef</Latency>
-<AbsoluteTimeLatency>undef</AbsoluteTimeLatency>
-<PipelineII>2</PipelineII>
-<PipelineDepth>2</PipelineDepth>
-</VITIS_LOOP_314_4>
+<PipelineII>20</PipelineII>
+<PipelineDepth>22</PipelineDepth>
+</VITIS_LOOP_142_1>
 </SummaryOfLoopLatency>
 </PerformanceEstimates>
 
 <AreaEstimates>
 <Resources>
 <BRAM_18K>0</BRAM_18K>
-<FF>391</FF>
-<LUT>1143</LUT>
+<FF>911</FF>
+<LUT>1923</LUT>
 <DSP>0</DSP>
 <URAM>0</URAM>
 </Resources>
@@ -90,7 +76,7 @@
 <InterfaceSummary>
 <RtlPorts>
 <name>ap_clk</name>
-<Object>bucket_unit_sr_Block_.split28_proc9</Object>
+<Object>bucket_unit_csim_sr_Block_.split24_proc5</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -101,7 +87,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>ap_rst</name>
-<Object>bucket_unit_sr_Block_.split28_proc9</Object>
+<Object>bucket_unit_csim_sr_Block_.split24_proc5</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -112,7 +98,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>ap_start</name>
-<Object>bucket_unit_sr_Block_.split28_proc9</Object>
+<Object>bucket_unit_csim_sr_Block_.split24_proc5</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -123,7 +109,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>start_full_n</name>
-<Object>bucket_unit_sr_Block_.split28_proc9</Object>
+<Object>bucket_unit_csim_sr_Block_.split24_proc5</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -134,7 +120,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>ap_done</name>
-<Object>bucket_unit_sr_Block_.split28_proc9</Object>
+<Object>bucket_unit_csim_sr_Block_.split24_proc5</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -145,7 +131,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>ap_continue</name>
-<Object>bucket_unit_sr_Block_.split28_proc9</Object>
+<Object>bucket_unit_csim_sr_Block_.split24_proc5</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -156,7 +142,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>ap_idle</name>
-<Object>bucket_unit_sr_Block_.split28_proc9</Object>
+<Object>bucket_unit_csim_sr_Block_.split24_proc5</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -167,7 +153,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>ap_ready</name>
-<Object>bucket_unit_sr_Block_.split28_proc9</Object>
+<Object>bucket_unit_csim_sr_Block_.split24_proc5</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -178,7 +164,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>start_out</name>
-<Object>bucket_unit_sr_Block_.split28_proc9</Object>
+<Object>bucket_unit_csim_sr_Block_.split24_proc5</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -189,7 +175,7 @@
 </RtlPorts>
 <RtlPorts>
 <name>start_write</name>
-<Object>bucket_unit_sr_Block_.split28_proc9</Object>
+<Object>bucket_unit_csim_sr_Block_.split24_proc5</Object>
 <Type>return value</Type>
 <Scope></Scope>
 <IOProtocol>ap_ctrl_hs</IOProtocol>
@@ -387,6 +373,39 @@
 </RtlPorts>
 <RtlPorts>
 <name>BFIFO_2_read</name>
+<Object>BFIFO_2</Object>
+<Type>pointer</Type>
+<Scope></Scope>
+<IOProtocol>ap_fifo</IOProtocol>
+<IOConfig></IOConfig>
+<Dir>out</Dir>
+<Bits>1</Bits>
+<Attribute>control</Attribute>
+</RtlPorts>
+<RtlPorts>
+<name>BFIFO_2_din</name>
+<Object>BFIFO_2</Object>
+<Type>pointer</Type>
+<Scope></Scope>
+<IOProtocol>ap_fifo</IOProtocol>
+<IOConfig></IOConfig>
+<Dir>out</Dir>
+<Bits>43</Bits>
+<Attribute>control</Attribute>
+</RtlPorts>
+<RtlPorts>
+<name>BFIFO_2_full_n</name>
+<Object>BFIFO_2</Object>
+<Type>pointer</Type>
+<Scope></Scope>
+<IOProtocol>ap_fifo</IOProtocol>
+<IOConfig></IOConfig>
+<Dir>in</Dir>
+<Bits>1</Bits>
+<Attribute>control</Attribute>
+</RtlPorts>
+<RtlPorts>
+<name>BFIFO_2_write</name>
 <Object>BFIFO_2</Object>
 <Type>pointer</Type>
 <Scope></Scope>
