--- a/hls_msm_32w_13bit/hls_msm_32w_13bit/solution1/syn/report/csynth.xml
+++ b/hls_msm_32w_13bit/hls_msm_32w_13bit/solution1/syn/report/csynth.xml
@@ -399,10 +399,10 @@
                                     <ID>112</ID>
                                     <InstancesList>
                                         <Instance>
-                                            <InstName>grp_pdouble_fu_102</InstName>
+                                            <InstName>grp_pdouble_fu_94</InstName>
                                             <ModuleName>pdouble</ModuleName>
                                             <IsCompInst>true</IsCompInst>
-                                            <ID>102</ID>
+                                            <ID>94</ID>
                                         </Instance>
                                     </InstancesList>
                                 </Instance>
@@ -2219,7 +2219,7 @@
                 <SummaryOfTimingAnalysis>
                     <TargetClockPeriod>4.00</TargetClockPeriod>
                     <ClockUncertainty>1.08</ClockUncertainty>
-                    <TargetInitiationInterval>1</TargetInitiationInterval>
+                    <TargetInitiationInterval>4294967295</TargetInitiationInterval>
                     <EstimatedClockPeriod>2.814</EstimatedClockPeriod>
                 </SummaryOfTimingAnalysis>
                 <SummaryOfOverallLatency>
@@ -2361,7 +2361,7 @@
                 <SummaryOfTimingAnalysis>
                     <TargetClockPeriod>4.00</TargetClockPeriod>
                     <ClockUncertainty>1.08</ClockUncertainty>
-                    <TargetInitiationInterval>1</TargetInitiationInterval>
+                    <TargetInitiationInterval>4294967295</TargetInitiationInterval>
                     <EstimatedClockPeriod>2.833</EstimatedClockPeriod>
                 </SummaryOfTimingAnalysis>
                 <SummaryOfOverallLatency>
